# caffe

./: .gitignore  CMakeLists.txt  cmake.sh
cmake/: Dependencies.cmake  Summary.cmake  Targets.cmake
contrib/faster_rcnn/: README.md
contrib/faster_rcnn/caffe/layers/: proposal_layer.cpp  proposal_layer.cu  proposal_layer.hpp  rcnn_output_layer.cpp  rcnn_output_layer.cu  rcnn_output_layer.hpp  roi_pooling_layer.cpp  roi_pooling_layer.hpp  smooth_L1_loss_layer.cpp  smooth_L1_loss_layer.hpp
contrib/faster_rcnn/caffe/test/: test_rcnn_output_layer.cpp  test_smooth_L1_loss_layer.cpp
contrib/faster_rcnn/tutorial/: demo.py
contrib/faster_rcnn/tutorial/models/: coco_vgg16_faster_rcnn_deploy.prototxt  fetch_coco_model.sh
contrib/faster_rcnn/tutorial/utils/: caffe_path.py  detector.py
contrib/ssd/: README.md
contrib/ssd/caffe/layers/: annotated_data_layer.cpp  annotated_data_layer.hpp  detection_output_layer.cpp  detection_output_layer.hpp  multibox_loss_layer.cpp  multibox_loss_layer.hpp  prior_box_layer.cpp  prior_box_layer.hpp  video_data_layer.cpp  video_data_layer.hpp
contrib/ssd/caffe/test/: test_annotated_data_layer.cpp  test_bbox_util.cpp  test_multibox_loss_layer.cpp  test_prior_box_layer.cpp
contrib/ssd/caffe/tools/: convert_annoset.cpp  create_label_map.cpp  get_image_size.cpp
contrib/ssd/caffe/util/: bbox_util.cpp  bbox_util.hpp  sampler.cpp  ssd_io.cpp  ssd_io.hpp  ssd_transformer.cpp  ssd_transformer.hpp
contrib/ssd/tutorial/: .gitignore  demo.py
contrib/ssd/tutorial/data/ILSVRC2016/: create_data.sh
contrib/ssd/tutorial/data/VOC0712/: create_data.sh  create_list.sh  download_voc.sh
contrib/ssd/tutorial/examples/ssd/: score_ssd_pascal.py  ssd_pascal.py  ssd_pascal_video.py  ssd_pascal_webcam.py
contrib/ssd/tutorial/models/VGGNet/: VGG_ILSVRC_16_layers_fc_reduced_deploy.prototxt
contrib/ssd/tutorial/tools/: convert_annoset  convert_inception_v3.py  create_annoset.py  create_label_map  get_image_size
contrib/ssd/tutorial/utils/: __init__.py  model_libs.py
include/caffe/: solver.hpp
src/caffe/: CMakeLists.txt  solver.cpp
src/caffe/proto/: caffe.proto
src/caffe/util/: io.cpp
test/: CMakeLists.txt
tools/: CMakeLists.txt
